<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_mode3"
    tools:context=".MainActivity"
    >
    <!--    android:background="@drawable/dark_mode_2"-->

    <LinearLayout
        android:id="@+id/login_llo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:id="@+id/user_name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/et_user_name"
            android:autofillHints="@string/et_password" />

        <EditText

            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="textPassword"
            android:padding="5dp"
            android:hint="@string/et_password"
            android:autofillHints="@string/et_password" />
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                    <Button
                        android:layout_marginBottom="10dp"
                        android:id="@+id/login_btn"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login_btn_to_login"
                        />
                    <Button
                        android:layout_marginLeft="10dp"

                        android:layout_marginBottom="10dp"
                        android:id="@+id/register_btn"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_in_register"
                        />
                </LinearLayout>
    </LinearLayout>

    <ImageView
        android:shadowColor="@color/design_default_color_error"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="5"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:src="@drawable/logo_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_llo"
        android:contentDescription="@string/text_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_welcome"
        android:textColor="#C7117D"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/login_llo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
